--- a/kadai_003(bootstrap)/index_for_student.html
+++ b/kadai_003(bootstrap)/index_for_student.html
@@ -27,7 +27,7 @@
             <img src="img/top_1.jpg" class="d-block w-100" alt="サンプル画像1">
             <div class="container">
               <!-- <div class="carousel-caption"> -->
-              <div class="carousel-caption">
+              <div class="carousel-caption d-none d-md-block">
                 <h1>Example headline.</h1>
                 <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget
                   metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
