kadai_003をアップロード3

--- a/kadai_003(bootstrap)/index_for_student.html
+++ b/kadai_003(bootstrap)/index_for_student.html
@@ -19,7 +19,7 @@
     <main>
       <!-- ************************************************ カールセル開始 -->
       <!-- <div id="myCarousel" class="carousel slide" data-bs-ride="carousel"> -->
-      <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+      <div id="myCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <!-- <div class="carousel-inner"> -->
         <div class="carousel-inner">
           <!-- <div class="carousel-item active"> -->
