kadai_006をアップロード2

--- a/kadai_006(bootstrap)/index_for_student.html
+++ b/kadai_006(bootstrap)/index_for_student.html
@@ -156,6 +156,7 @@
       </div>
      </div>
 
+     <div class="container">
        <hr class="featurette-divider">
       <div class="card-group">
         <div class="card">
@@ -215,7 +216,7 @@
           </div>
           </div>
       </div>
-
+      </div>
 
 
 
